@@ -1,3 +1,9 @@
+2006-09-19 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* as/link/aslink.h: cosmetic changes
+	* as/link/mcs51/Makefile.in,
+	* as/link/z80/Makefile.in: fixed build on CF where VPATH is used
+
 2006-09-17 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* as/link/aslink.h,
